Fixed problem with left blue column not showing up
I added a new "id" to support left as well as right blue columns

--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -72,6 +72,10 @@ body
 
 #rightcolblue
   border-right 7px solid blue_alliance
+  min-height  200px
+
+#leftcolblue
+  border-left 7px solid blue_alliance
   min-height 200px
 
 #scoreleft
